Add a Speech Recognize Activity

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,28 +2,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-     >
+    android:orientation="vertical" >
 
     <Button
         android:id="@+id/set_error_item"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/textview_seterror"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="@string/textview_seterror" />
 
     <Button
         android:id="@+id/get_device_info_item"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/get_device_info"
-        android:gravity="center" />
-    
+        android:gravity="center"
+        android:text="@string/get_device_info" />
+
     <Button
         android:id="@+id/list_progress_item"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/list_progress"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="@string/list_progress" />
+
+    <Button
+        android:id="@+id/speech_recognize_item"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/speech_recognize" />
 
 </LinearLayout>
