--- a/res/layout/speech_recognize.xml
+++ b/res/layout/speech_recognize.xml
@@ -12,7 +12,7 @@
         android:gravity="center"
         android:text="@string/start_speak" />
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/edittext_input"
         android:hint="@string/waiting_for_input"
         android:layout_width="fill_parent"
