--- a/res/layout/speech_recognize.xml
+++ b/res/layout/speech_recognize.xml
@@ -18,6 +18,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@id/btn_speak" />
+        android:layout_toLeftOf="@id/btn_speak"
+        android:singleLine="true" />
 
 </RelativeLayout>
