Add a TabActivityTest and a Workspace demo

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -45,5 +45,19 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/tab_bar" />
+    
+    <Button
+        android:id="@+id/tab_activity_item"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/tab_activity" />
+    
+    <Button
+        android:id="@+id/workspace_item"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/workspace" />
 
 </LinearLayout>
