Add a new style of the tab

--- a/res/layout/tab_activity_test.xml
+++ b/res/layout/tab_activity_test.xml
@@ -20,7 +20,7 @@
             android:id="@android:id/tabs"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/nav_btn_offman_download_normal"
+            android:background="@drawable/tab_bar_normal"
             android:paddingLeft="1dip"
             android:paddingRight="1dip"
             android:paddingTop="4dip" />
