--- a/res/drawable/nav_tab.xml
+++ b/res/drawable/nav_tab.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/nav_btn_offman_download_press" android:state_selected="true"></item>
+    <item android:drawable="@drawable/table_deep_footer_white" android:state_selected="true"></item>
+    <item android:drawable="@drawable/table_deep_footer_gray" android:state_pressed="true"></item>
     <item android:drawable="@android:color/transparent" android:state_selected="false"></item>
 
 </selector>
