A demo for insert item to header and footer

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -59,5 +59,12 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/workspace" />
+    
+    <Button
+        android:id="@+id/list_item"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/list_insert" />
 
 </LinearLayout>
