--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -66,5 +66,12 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/list_insert" />
+    
+    <Button
+        android:id="@+id/viewpager_item"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/viewpager" />
 
 </LinearLayout>
