--- a/res/layout/activity_first.xml
+++ b/res/layout/activity_first.xml
@@ -4,11 +4,18 @@
     android:layout_height="match_parent"
     tools:context=".FirstActivity" >
 
-    <TextView
+<!--     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="@string/tab1" />
+        android:text="@string/tab1" /> -->
+    <Button 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:onClick="onButtonClicked"
+        android:text="button"/>
 
 </RelativeLayout>
