--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -84,6 +84,13 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/actionbar" />
+        
+        <Button
+            android:id="@+id/webview_item"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/webview" />
     </LinearLayout>
 
 </ScrollView>
